fixed sizing in about section -> need to fix the overflow on projets

--- a/styles.css
+++ b/styles.css
@@ -304,14 +304,14 @@
   height: 90%;
   z-index: 1;
   width: 100%;
-  max-width: 2000px;
+  max-width: 100%;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
   padding: 0 70px;
-  margin: 5px 100px;
+  /* margin: 5px 100px; */
   align-items: center;
   justify-content: center;
 }
@@ -331,7 +331,8 @@
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
   text-transform: uppercase;
-  margin-bottom: 32px;
+  margin-bottom: 16px;
+  margin: 0 auto 1rem;
 }
 
 .main__container h2{
@@ -344,7 +345,8 @@
 }
 
 .main__content p{
-  margin-top: 1rem;
+  margin-top: -32px;
+  margin-bottom: 1rem;
   font-size: 1rem;
   font-weight: 700;
   border: #FAAE3D;
@@ -401,8 +403,9 @@
 
 .main__img--card img{
   margin: 100px;
-  height: 500px;
-  width: 500px;
+  height: 300px;
+  /* width: 300px; */
+  max-width:fit-content;
   border-radius: 70px;
 }
 
@@ -448,9 +451,17 @@
 }
 
 @media screen and (max-width: 480px){
+  .main__container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   .main__img--card{
     width: 250px;
     height: 250px;
+    margin-bottom: 2rem;
 
   }
 
@@ -461,7 +472,7 @@
 
   .main__content h1{
     margin-top: 2rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
     
   }
 
@@ -515,6 +526,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
+  overflow-x: auto;
 }
  
 .projects__card {
@@ -531,6 +543,7 @@
   background: linear-gradient(to right, #44318d, #8b5fbf, #d8c3f3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   transition: 0.3s ease-in;
 }
+
 
 
 .projects__card:nth-child(2){
